# atlabotics-robothon

./: README.md
moveit_interface/: CMakeLists.txt  package.xml
moveit_interface/config/: execute_task.sh  maze_path.csv  move_group_params.yaml
moveit_interface/include/: moveit_interface.h
moveit_interface/launch/: moveit_interface.launch.py
moveit_interface/src/: main.cpp  moveit_interface.cpp
perception_system/: package.xml  setup.cfg  setup.py
perception_system/launch/: board_localization_launch.py
perception_system/perception_system/: board_localization.py  detection_task.py  inference.py  perception_system_node.py  realsense.py  save_images.py
perception_system/weights/: dataset.yaml
perception_system/weights/task_board_dataset/: data.yaml  train.txt
perception_system/weights/task_board_dataset/images/: .train_cache.json
perception_system/weights/task_board_dataset/labels/: train.cache  val.cache
perception_system/weights/task_board_dataset/labels/test/: captured_image_092_20250520_171026.txt  captured_image_093_20250520_171031.txt  captured_image_094_20250520_171040.txt  captured_image_095_20250520_171045.txt  captured_image_096_20250520_171049.txt  captured_image_097_20250520_171101.txt  captured_image_098_20250520_171108.txt  captured_image_099_20250520_171117.txt  captured_image_100_20250520_171127.txt
perception_system/weights/task_board_dataset/labels/train/: captured_image_001_20250520_170020.txt  captured_image_002_20250520_170035.txt  captured_image_003_20250520_170039.txt  captured_image_004_20250520_170043.txt  captured_image_005_20250520_170047.txt  captured_image_006_20250520_170051.txt  captured_image_007_20250520_170055.txt  captured_image_008_20250520_170059.txt  captured_image_009_20250520_170103.txt  captured_image_010_20250520_170107.txt  captured_image_011_20250520_170113.txt  captured_image_012_20250520_170125.txt  captured_image_013_20250520_170130.txt  captured_image_014_20250520_170134.txt  captured_image_015_20250520_170138.txt  captured_image_016_20250520_170143.txt  captured_image_017_20250520_170148.txt  captured_image_018_20250520_170151.txt  captured_image_019_20250520_170153.txt  captured_image_020_20250520_170201.txt  captured_image_021_20250520_170213.txt  captured_image_022_20250520_170219.txt  captured_image_023_20250520_170225.txt  captured_image_024_20250520_170231.txt  captured_image_025_20250520_170236.txt  captured_image_026_20250520_170244.txt  captured_image_027_20250520_170251.txt  captured_image_028_20250520_170255.txt  captured_image_029_20250520_170257.txt  captured_image_030_20250520_170303.txt  captured_image_031_20250520_170320.txt  captured_image_032_20250520_170342.txt  captured_image_033_20250520_170347.txt  captured_image_034_20250520_170356.txt  captured_image_035_20250520_170401.txt  captured_image_036_20250520_170405.txt  captured_image_037_20250520_170416.txt  captured_image_038_20250520_170431.txt  captured_image_039_20250520_170458.txt  captured_image_040_20250520_170504.txt  (+30 more)
perception_system/weights/task_board_dataset/labels/val/: captured_image_072_20250520_170842.txt  captured_image_073_20250520_170848.txt  captured_image_074_20250520_170853.txt  (+17 more)
perception_system/weights/train/: args.yaml  results.csv
(+10 files in other folders)
